fix some styling on mobile popup

--- a/src/components/TeamMemberPopup/TeamMemberPopup.css
+++ b/src/components/TeamMemberPopup/TeamMemberPopup.css
@@ -19,7 +19,7 @@
   max-width: 975px;
   max-height: 90%;
   overflow-y: auto;
-  padding: 20px;
+  padding: 25px;
 }
 
 .left-column {
@@ -113,7 +113,7 @@
 
 .close-button {
   position: absolute;
-  right: 140px;
+  right: 115px;
   background: none;
   border: none;
   cursor: pointer;
@@ -126,13 +126,12 @@
 @media (max-width: 767px) {
   .popup-content {
     width: 100%;
-    padding: 25px;
   }
   
   .left-column {
     max-width: 100%;
     padding-right: 0;
-    margin-bottom: 10px;
+    margin: 20px auto;
   }
   
   .right-column h2 {
